--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.2.4",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
@@ -38,6 +39,8 @@
     "node-telegram-bot-api": "^0.61.0",
     "node-telegram-bot-api-middleware": "^0.1.3",
     "openai": "^4.6.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -55,6 +58,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/node-telegram-bot-api": "^0.61.7",
+    "@types/passport-jwt": "^3.0.9",
     "@types/sequelize": "^4.28.15",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
